[package]
name = "smart-fhir-token-broker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
